--- a/client/src/App.css
+++ b/client/src/App.css
@@ -59,6 +59,11 @@
   background-color: #2e4440;
 }
 
+.light-mode {
+    color: black;
+    background-color: white;
+
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
